# ray_tracer

./: .gitignore  Cargo.toml  README.md
benches/: single_ray_icosphere_1280_triangles.rs
src/: camera.rs  geometry.rs  lib.rs  main.rs  object.rs  objects.rs  octree.rs  scene.rs  space_partition.rs  tracer.rs
src/object/: sphere.rs  triangle.rs
src/space_partition/: kdtree.rs  octree.rs
