[package]
name = "ray_tracer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
png = "0.17"
crossbeam = "0.8"
nanorand = "0.6"
glam = "0.20"
log = "0.4"
env_logger = "0.11.6"
wavefront_obj = "11.0.0"
num_cpus = "1.13"

[dev-dependencies]
criterion = "0.5.1"

[[bench]]
name = "single_ray_icosphere_1280_triangles"
harness = false
